--- a/examples/1150215/index.html
+++ b/examples/1150215/index.html
@@ -16,7 +16,7 @@
                 </p>
                 <div id="text2">
                     <h3>План исследования:</h3>
-                    <p>1. Гипотза</p>
+                    <p>1. Гипотеза</p>
                     <p>2. Математическое обоснование</p>
                     <p>3. Построение 3D-модели</p>
                     <p>4. Решение</p>
@@ -29,10 +29,7 @@
             <div class="pageContent">
                 <div id="img1c"><img id="img1" src="img/1.png"></div>
                 <p id="text1">
-                    Высота SH треугольника BSC есть расстояние от точки S до плоскости трапеции ABCD
-                </p>
-                <p id="text2">
-                    По аксиоме: если две поскости имеют общую точку, то они имеют общую прямую, на которой лежат все общие точки этих плоскостей
+                    Высота SH треугольника BSC есть расстояние от точки S до плоскости трапеции ABCD, где точка H лежит на BC
                 </p>
             </div>
         </div>
@@ -41,34 +38,28 @@
             <div class="pageContent">
                 <div id="img2c"><img id="img1" src="img/2.png"></div>
                 <div id="textBig">
-                    <p id="txtPart0">
-                        Расстояние от точки S  до плоскости трапеции - это длина перпендикуляра, опущенного из точки S на плоскость трапеции. Определим местоположение основания перпендикуляра.
+                    <p class="txtPart">
+                        Расстояние от точки S  до плоскости трапеции- это длина перпендикуляра, опущенного из точки S на плоскость трапеции. Определим местоположение основания перпендикуляра.
                     </p>
-                    <p id="txtPart1">
-                    По условию задачи плоскости SAB и SCD перпендикулярны плоскости трапеции ABCD: 
-                    <br>(SAB) ⟂ (ABCD), (SCD) ⟂ (ABCD).
+                    <br>
+                    <p class="txtPart">
+                        Плоскости ABS и  DCS имеют одну общую точку S, тогда по аксиоме, эти плоскости имеют общую прямую. Найдем вторую точку.
                     </p>
-                <br>
-                    <p id="txtPart3">
-                    Рассмотрим перпендикуляр, опущенный из точки S на плоскость трапеции ABCD. Обозначим основание этого перпендикуляра через точку H.
+                    <br>
+                    <p class="txtPart">
+                        Плоскости  ABS и  DCS пересекаются с плоскостью трапеции по прямым АВ и DC.
                     </p>
-                <br>
-                    <p id="txtPart4">
-                    Так как отрезок SH лежит в плоскости SAB, а линия пересечения плоскостей SAB и ABCD есть прямая AB, то точка H должна лежать на прямой AB.
+                    <br>
+                    <p class="txtPart">
+                        Т.к. АВDС-это трапеция, то   АВ и DC не параллельны.  Н- это точка пересечения продолжения АВ и DC и тогда SН- общая прямая данных плоскостей.
                     </p>
-                <br>
-                    <p id="txtPart5">
-                    Аналогично, так как отрезок SH лежит и в плоскости SCD, а линия пересечения плоскостей SCD и ABCD есть прямая CD, то точка H должна лежать и на прямой CD.
+                    <br>
+                    <p class="txtPart">
+                        По теореме: Если каждая из двух пересекающихся плоскостей перпендикулярна третьей плоскости, то их  линия пересечение также перпендикулярна этой плоскости ., получаем, что  Н S и есть перпендикуляр к плоскости, а следовательно расстояние от точки S  до плоскости трапеции.
                     </p>
-                <br>
-                    <p id="txtPart6">
-                    Следовательно, точка H одновременно принадлежит прямым AB и CD:
-                    H ∈ AB и H ∈ CD.
-                    Значит, H — точка пересечения прямых AB и CD.
-                    </p>
-                <br>
-                    <p id="txtPart7">
-                    Таким образом, расстояние от точки S до плоскости трапеции ABCD равно длине отрезка SH, где H — точка пересечения прямых AB и CD.
+                    <br>
+                    <p class="txtPart" id="txtPart7">
+                        Точка Н не может лежать на ВС. Наше предположение неверно.
                     </p>
                 </div>
             </div>
@@ -76,7 +67,8 @@
         <div id="p4" data-num="4" class="page">
             <h1>3. 3D-модель</h1>
             <div class="pageContent">
-                <iframe id="3d" src="https://app.sketchup.com/share/tc/europe/fd86gzTonCo?source=web&stoken=ywcirIFKXEN0BUV5ZKBblrePBqA2thpiPiIHdlIPpzuIFMqmLs0pQn26f5utkqSL"></iframe>
+                <!--iframe id="3d" src="https://app.sketchup.com/share/tc/europe/fd86gzTonCo?source=web&stoken=ywcirIFKXEN0BUV5ZKBblrePBqA2thpiPiIHdlIPpzuIFMqmLs0pQn26f5utkqSL"></iframe-->
+                <iframe id="3d" src="https://app.sketchup.com/share/tc/europe/fgGFMRAS3qM?source=web&stoken=zgXxvmu9c-Iwp-H3bGnWDnj788jhEtBEVOhk6Nltybnfi_NCzRcHWJu0U0jrO3ln"></iframe>
             </div>
         </div>
         <div id="p5" data-num="5" class="page">
@@ -98,7 +90,7 @@
             <div class="pageContent">
                 <div id="img2c"><img id="img1" src="img/2.png"></div>
                 <p id="text1">
-                    Гипотеза не оправдалась - построив 3D-модель задачи, мы увидели, что высота SH треугольника BSC не является перпендикуляром к плоскости трапеции ABCD, а значит не может быть расстоянием от точки S до этой плоскости. Расстояние от точки до плоскости определяется как длина перпендикуляра, опущенного из этой точки на плоскость. В данной задаче перпендикуляр из точки S к плоскости ABCD проходит через точку пересечения прямых AB и CD. Используя это свойство и теорему Пифагора, было найдено истинное расстояние от точки S до плоскости трапеции, равное 9.
+                    Наша гипотеза не подтвердилась. Основание высоты SH лежит вне плоскости трапеции и искомое расстояние равно 9.
                 </p>
             </div>
         </div>
